// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductList /> check how renders should render correct info for ALL_PRODUCTS with filters 1`] = `
<DocumentFragment>
  .c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <h4
      class="c1"
      data-testid="ProductList-empty-list-info"
      font-size=""
    >
      We didn't find any matching results. Try to search something else or change filters
    </h4>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render correct info for ALL_PRODUCTS without filters other than name 1`] = `
<DocumentFragment>
  .c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <h4
      class="c1"
      data-testid="ProductList-empty-list-info"
      font-size=""
    >
      We didn't find any matching results. Try to search something else
    </h4>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render correct info for MY_PRODUCTS with filters 1`] = `
<DocumentFragment>
  .c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <h4
      class="c1"
      data-testid="ProductList-empty-list-info"
      font-size=""
    >
      We didn't find any matching results. Try to change filters
    </h4>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render correct info for MY_PRODUCTS without filters other than name 1`] = `
<DocumentFragment>
  .c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <h4
      class="c1"
      data-testid="ProductList-empty-list-info"
      font-size=""
    >
      You don't have any offers published yet
    </h4>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render correct info for USER_PRODUCTS with filters 1`] = `
<DocumentFragment>
  .c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <h4
      class="c1"
      data-testid="ProductList-empty-list-info"
      font-size=""
    >
      We didn't find any matching results. Try to change filters
    </h4>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render correct info for USER_PRODUCTS without filters other than name 1`] = `
<DocumentFragment>
  .c1 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: center;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <h4
      class="c1"
      data-testid="ProductList-empty-list-info"
      font-size=""
    >
      This user doesn't have any offers published yet
    </h4>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render list with one item 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 13;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > *:not(:last-child) {
  margin-right: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c5 > *:not(:last-child) {
  margin-bottom: 0;
}

.c2 {
  border-bottom: 1px solid #DADFE1;
  padding: 1.2rem;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

.c2:hover {
  background-color: rgba(0,0,0,0.05);
  cursor: pointer;
}

.c2 .buyer-quantity-box {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.2rem;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c7 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
  margin-top: calc(0.8rem + 0rem);
}

.c8 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
}

.c9 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
  margin-top: calc(1.2rem + 0rem);
}

.c4 {
  max-height: 15rem;
  min-width: 13rem;
  width: 13rem;
}

.c4 img {
  max-height: 15rem;
  max-width: 13rem;
  object-fit: cover;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

@media only screen and (max-width:24.5em) {
  .c2 .photo-box {
    max-height: 13rem;
    min-width: 10rem;
    width: 10rem;
  }
}

@media only screen and (max-width:22.5em) {
  .c2 .photo-box {
    max-height: 11rem;
    min-width: 8rem;
    width: 8rem;
  }
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <a
      data-testid="ProductItem"
    >
      <div
        class="c1 c2"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <div
          class="c3 c4"
          data-testid="ProductThumbnail"
          direction="row"
          height="15"
          spacing=""
          width="13"
          wrap="nowrap"
        >
          <img
            alt="product1"
            data-testid="ProductThumbnail-img"
            src="no-photo.png"
          />
        </div>
        <div
          class="c5"
          direction="column"
          spacing=""
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c6"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            product1
          </span>
          <span
            class="c7"
            color=""
            data-testid="ProductItem-condition"
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            <span
              class="c8"
              color="#777"
              display="inline-block"
              overflow="visible"
              spacing="0px"
              transform=""
            >
              Condition:
            </span>
             New
          </span>
          <span
            class="c9"
            color=""
            data-testid="ProductItem-price"
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $10.60
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render list with two items 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 13;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > *:not(:last-child) {
  margin-right: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c5 > *:not(:last-child) {
  margin-bottom: 0;
}

.c2 {
  border-bottom: 1px solid #DADFE1;
  padding: 1.2rem;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

.c2:hover {
  background-color: rgba(0,0,0,0.05);
  cursor: pointer;
}

.c2 .buyer-quantity-box {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 1.2rem;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c7 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
  margin-top: calc(0.8rem + 0rem);
}

.c8 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
}

.c9 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
  margin-top: calc(1.2rem + 0rem);
}

.c4 {
  max-height: 15rem;
  min-width: 13rem;
  width: 13rem;
}

.c4 img {
  max-height: 15rem;
  max-width: 13rem;
  object-fit: cover;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

@media only screen and (max-width:24.5em) {
  .c2 .photo-box {
    max-height: 13rem;
    min-width: 10rem;
    width: 10rem;
  }
}

@media only screen and (max-width:22.5em) {
  .c2 .photo-box {
    max-height: 11rem;
    min-width: 8rem;
    width: 8rem;
  }
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <a
      data-testid="ProductItem"
    >
      <div
        class="c1 c2"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <div
          class="c3 c4"
          data-testid="ProductThumbnail"
          direction="row"
          height="15"
          spacing=""
          width="13"
          wrap="nowrap"
        >
          <img
            alt="product1"
            data-testid="ProductThumbnail-img"
            src="no-photo.png"
          />
        </div>
        <div
          class="c5"
          direction="column"
          spacing=""
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c6"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            product1
          </span>
          <span
            class="c7"
            color=""
            data-testid="ProductItem-condition"
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            <span
              class="c8"
              color="#777"
              display="inline-block"
              overflow="visible"
              spacing="0px"
              transform=""
            >
              Condition:
            </span>
             New
          </span>
          <span
            class="c9"
            color=""
            data-testid="ProductItem-price"
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $10.60
          </span>
        </div>
      </div>
    </a>
    <a
      data-testid="ProductItem"
    >
      <div
        class="c1 c2"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <div
          class="c3 c4"
          data-testid="ProductThumbnail"
          direction="row"
          height="15"
          spacing=""
          width="13"
          wrap="nowrap"
        >
          <img
            alt="product2"
            data-testid="ProductThumbnail-img"
            src="no-photo.png"
          />
        </div>
        <div
          class="c5"
          direction="column"
          spacing=""
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c6"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            product2
          </span>
          <span
            class="c7"
            color=""
            data-testid="ProductItem-condition"
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            <span
              class="c8"
              color="#777"
              display="inline-block"
              overflow="visible"
              spacing="0px"
              transform=""
            >
              Condition:
            </span>
             New
          </span>
          <span
            class="c9"
            color=""
            data-testid="ProductItem-price"
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $299.98
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<ProductList /> check how renders should render only <LoadingOverlay /> 1`] = `
<DocumentFragment>
  .c2 {
  display: inline-block;
  position: relative;
  width: 4rem;
  height: 4rem;
}

.c2 > div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  border-radius: 50%;
  -webkit-animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  width: 4rem;
  height: 4rem;
  border: 0.5rem solid #1E8BC3;
  border-color: #1E8BC3 transparent transparent transparent;
}

.c2 > div:nth-child(1) {
  -webkit-animation-delay: -0.45s;
  animation-delay: -0.45s;
}

.c2 > div:nth-child(2) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c2 > div:nth-child(3) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAFAFA88;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: start;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 10;
}

.c0 {
  min-height: 4rem;
  position: relative;
  width: 100%;
}

<div
    class="c0"
    data-testid="ProductList"
  >
    <div
      class="c1"
      data-testid="LoadingOverlay"
    >
      <div
        class="c2"
        data-testid="Loader"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
